--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,7 +18,7 @@ div#wall div.parent #tag-5 {
   display: none;
 } 
 
-#wall .parent #tag-6 {
+body div#wall div.parent #tag-6 {
   display: none; 
 }
 
